play / pause is working now

--- a/Radio Free Peterborough/app/pages/page1/page1.scss
+++ b/Radio Free Peterborough/app/pages/page1/page1.scss
@@ -1,3 +1,22 @@
 .page1 {
 
 }
+
+
+.rfp-player {
+
+	width: auto;
+	height: vh 20%;
+
+}
+
+.rfp-playbutton { margin-right: 6%; }
+
+#rfp-hidden-player { 
+
+display: none;  
+
+
+}
+
+a:hover { color: orange; cursor: pointer; }
