--- a/Radio Free Peterborough/app/pages/page1/page1.scss
+++ b/Radio Free Peterborough/app/pages/page1/page1.scss
@@ -1,5 +1,6 @@
 .page1 {
 
+	text-align: center;
 }
 
 
@@ -10,7 +11,9 @@
 
 }
 
-.rfp-playbutton { margin-right: 6%; }
+#playbutton {  background: none; padding: 5%; text-align: center !important;  }
+
+#playbutton IMG { width: auto;  height: vh 30%;  margin: auto;  }
 
 #rfp-hidden-player { 
 
@@ -20,3 +23,7 @@ display: none;
 }
 
 a:hover { color: orange; cursor: pointer; }
+
+#metadata-wrapper { padding: 2%;  }
+#artist { font-size: 1.2em; color: red; text-align: center; }
+#track { font-size: 2.5em; color: red; text-align: center;  }
