--- a/Radio Free Peterborough/app/pages/page2/page2.scss
+++ b/Radio Free Peterborough/app/pages/page2/page2.scss
@@ -3,4 +3,13 @@
 	text-align: center;
 }
 
-IMG.album-cover { width: 100%; height: auto; padding: 1.5%; background: orange;   }
+IMG.album-cover { width: 100%; height: auto;  }
+
+H2#recording-name { background: #fff; font-size: 2em; }
+
+.artist-modal { background: #fff;  }
+
+#recording-playbutton { min-width: 50px !important; min-height: 50px !important; }
+#recording-playbutton IMG {  width: 50px !important;  height: 50px !important; background: none;  } 
+
+#recording-page-now-playing {  font-size: 1.8em;  }
