--- a/Radio Free Peterborough/app/pages/page2/page2.scss
+++ b/Radio Free Peterborough/app/pages/page2/page2.scss
@@ -14,3 +14,5 @@ H2#recording-name { background: #fff; font-size: 2em; }
 
 #recording-page-now-playing {  font-size: 1.8em;  }
 
+
+#rfp-player-wrapper { text-align: center; } 
