--- a/Radio Free Peterborough/app/pages/page2/page2.scss
+++ b/Radio Free Peterborough/app/pages/page2/page2.scss
@@ -5,14 +5,22 @@
 
 IMG.album-cover { width: 100%; height: auto;  }
 
-H2#recording-name { background: #fff; font-size: 2em; }
+H2#recording-name { background: #fff; font-size: 0.85em; }
 
 .artist-modal { background: #fff;  }
 
 #recording-playbutton { min-width: 50px !important; min-height: 50px !important; }
 #recording-playbutton IMG {  width: 50px !important;  height: 50px !important; background: none;  } 
 
-#recording-page-now-playing {  font-size: 1.8em;  }
+#recording-page-now-playing {  font-size:2.2em;  }
+
+#recording-prevbutton, #recording-nextbutton {
+
+	margin: 0;
+	padding: 0;
+}
+
+#track-details { margin-left: 10px; }
 
 
-#rfp-player-wrapper { text-align: center; } 
+#rfp-player { text-align: center; } 
